feat(i18n): add conditional skills translations for calculator

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -101,9 +101,12 @@
         "trainingRank": "Est. Final Rank",
         "rankBelowSS": "Below SS+",
         "rankSSPlus": "SS+ & Higher",
-        "acquirableSkills": "Acquirable White Sparks",
-        "selectAcquirableSkills": "Select Acquirable Skills...",
+        "acquirableSkills": "Acquirable White Sparks (Purchased)",
+        "selectAcquirableSkills": "Select Purchasable Skills...",
         "allSkillsConsidered": "All lineage skills considered",
+        "conditionalSkills": "Conditional White Sparks (Free)",
+        "selectConditionalSkills": "Select Conditional Sparks...",
+        "noConditionalSkills": "No conditional sparks selected",
         "obtainableAptitudes": "Obtainable Aptitudes (for Pink Sparks)",
         "estimatedProbabilities": "Estimated Probabilities",
         "probScoreUpgrade": "Probability of Score Upgrade",
