feat(i18n): add japanese translations for conditional skills

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -114,9 +114,12 @@
     "trainingRank": "想定最終評価",
     "rankBelowSS": "SS+未満",
     "rankSSPlus": "SS+以上",
-    "acquirableSkills": "習得可能な白因子",
-    "selectAcquirableSkills": "習得可能なスキルを選択...",
+    "acquirableSkills": "習得可能な白因子（購入）",
+    "selectAcquirableSkills": "購入可能なスキルを選択...",
     "allSkillsConsidered": "血統内の全スキルを考慮",
+    "conditionalSkills": "条件付き白因子（無料）",
+    "selectConditionalSkills": "条件付きスキルを選択...",
+    "noConditionalSkills": "条件付きスキル未選択",
     "obtainableAptitudes": "習得可能な適性（赤因子用）",
     "estimatedProbabilities": "推定確率",
     "probScoreUpgrade": "スコア更新の確率",
