feat(i18n): add translations for calculator mode toggle

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -94,6 +94,8 @@
         "probabilityCalculator": "Probability Calculator",
         "inputs": "Inputs",
         "targetOutcome": "Target Outcome",
+        "targetFinalScore": "Target: Final Score",
+        "targetIndividualScore": "Target: Individual Score",
         "runConfiguration": "Run Configuration",
         "targetStats": "Target Stats",
         "spBudget": "Est. Skill Point Budget",
@@ -109,7 +111,8 @@
         "noConditionalSkills": "No conditional sparks selected",
         "obtainableAptitudes": "Obtainable Aptitudes (for Pink Sparks)",
         "estimatedProbabilities": "Estimated Probabilities",
-        "probToSurpassLabel": "Prob. to surpass {{name}} ({{score}} pts)",
+        "probToSurpassFinalLabel": "Prob. to surpass {{name}}'s Final Score ({{score}} pts)",
+        "probToSurpassIndividualLabel": "Prob. to surpass {{name}}'s Individual Score ({{score}} pts)",
         "probSparkCountUpgrade": "Prob. of >{{count}} White Sparks",
         "probSparkCountUpgrade_label": "Prob. of Spark Count Upgrade",
         "disclaimerText": "Probabilities are estimates based on game data and certain assumptions:",
