--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -107,6 +107,8 @@
     "probabilityCalculator": "確率計算機",
     "inputs": "入力",
     "targetOutcome": "目標結果",
+    "targetFinalScore": "目標: 最終スコア",
+    "targetIndividualScore": "目標: 基礎スコア",
     "runConfiguration": "育成設定",
     "targetStats": "目標ステータス",
     "spBudget": "想定スキルPt",
@@ -122,7 +124,8 @@
     "noConditionalSkills": "条件付きスキル未選択",
     "obtainableAptitudes": "習得可能な適性（赤因子用）",
     "estimatedProbabilities": "推定確率",
-    "probToSurpassLabel": "「{{name}}」({{score}} pt)超えの確率",
+    "probToSurpassFinalLabel": "「{{name}}」の最終スコア ({{score}} pt)超えの確率",
+    "probToSurpassIndividualLabel": "「{{name}}」の基礎スコア ({{score}} pt)超えの確率",
     "probSparkCountUpgrade": "白因子{{count}}個超の確率",
     "probSparkCountUpgrade_label": "白因子数更新の確率",
     "disclaimerText": "確率はゲームデータと特定の仮定に基づいた推定値です：",
