feat(i18n): add tooltip translation for individual score

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -31,7 +31,8 @@
         "whiteSparkCount": "Unique Lineage White Sparks",
         "totalWhiteSparkCount": "Total Lineage White Sparks (including duplicates)",
         "parentSource": "Parent",
-        "gpSource": "Grandparent"
+        "gpSource": "Grandparent",
+        "individualScoreTooltip": "Individual Score: {{score}} pts"
     },
     "inventory": {
         "title": "Parent Inventory",
