--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -66,7 +66,8 @@
     },
     "minWhiteSkills": "白因子の最低数",
     "sortOptions": {
-      "score": "スコア",
+      "finalScore": "最終スコア",
+      "individualScore": "基礎スコア",
       "name": "名前",
       "gen": "世代",
       "date": "追加日",
