locale(en): add translation for show borrowed filter

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -57,6 +57,7 @@
             "owned": "Owned",
             "borrowed": "Borrowed"
         },
+        "showBorrowed": "Show Borrowed Parents",
         "blueSpark": "Blue Spark",
         "pinkSpark": "Pink Spark",
         "uniqueSpark": "Unique Spark",
