locale(en): add translation for lineage spark filter

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -62,6 +62,7 @@
         "pinkSpark": "Pink Spark",
         "uniqueSpark": "Unique Spark",
         "whiteSpark": "White Spark",
+        "lineageSpark": "Lineage-Wide Spark",
         "allTypes": "All Types",
         "anyStars": "Any ★",
         "clearFilters": "Clear Filters",
