--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -56,6 +56,7 @@
     "pinkSpark": "赤因子",
     "uniqueSpark": "固有因子",
     "whiteSpark": "白因子",
+    "lineageSpark": "血統共通因子",
     "minStars": "星数",
     "allTypes": "全てのタイプ",
     "anyStars": "指定なし",
