locale(en): add filtersTitle key to roster namespace

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -3,6 +3,7 @@
     "rosterSortBy": "Sort By:",
     "finalScore": "Final Score",
     "individualScore": "Individual Score",
+    "filtersTitle": "Filters",
     "placeholderRoster": "No parents in this roster. Add one to get started!",
     "addParentBtn": "Add Parent",
     "topPairTitle": "Top Breeding Pair",
