locale(jp): add filtersTitle key to roster namespace

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -3,6 +3,7 @@
   "rosterSortBy": "ソート:",
   "finalScore": "最終スコア",
   "individualScore": "基礎スコア",
+  "filtersTitle": "フィルター",
   "addParentBtn": "新しい親を追加",
   "placeholderRoster": "このプロジェクトのウマ娘一覧は空です。所持ウマ娘から追加するか、新しく作成してください。",
   "topPairTitle": "継承相性上位ペア",
